# Selenium_Automation_Agent

./: .classpath  .gitignore  .project  BUILD.bazel  CONTRIBUTING.md  README.md  Rakefile  package-lock.json
common/src/web/: BUILD.bazel  inputs.html
common/src/web/rc/tests/: FailingTestSuite.html  TestBasicAuth.html  TestBrowserVersion.html  TestCookie.html  TestCssLocators.html  TestDomainCookie.html  TestJSSuite.html  TestJavascriptParameters.html  TestOpen.html  TestSuite.html  TestUIElementLocators.html  TestXPathLocators.html
common/src/web/rc/tests/dogfood/: TestBaseUrl.html
py/: BUILD.bazel  CHANGES  MANIFEST.in  conftest.py  setup.py
py/docs/source/: api.rst  conf.py  index.rst
py/docs/source/common/: selenium.common.exceptions.rst
py/docs/source/webdriver/: selenium.webdriver.common.action_chains.rst  selenium.webdriver.common.alert.rst  selenium.webdriver.common.by.rst  selenium.webdriver.common.desired_capabilities.rst  selenium.webdriver.common.html5.application_cache.rst  selenium.webdriver.common.keys.rst  selenium.webdriver.common.proxy.rst  selenium.webdriver.common.service.rst  selenium.webdriver.common.touch_actions.rst  selenium.webdriver.common.utils.rst
py/docs/source/webdriver_chrome/: selenium.webdriver.chrome.options.rst  selenium.webdriver.chrome.service.rst  selenium.webdriver.chrome.webdriver.rst
py/docs/source/webdriver_chromium/: selenium.webdriver.chromium.options.rst  selenium.webdriver.chromium.service.rst  selenium.webdriver.chromium.webdriver.rst
py/docs/source/webdriver_edge/: selenium.webdriver.edge.options.rst  selenium.webdriver.edge.service.rst  selenium.webdriver.edge.webdriver.rst
py/docs/source/webdriver_firefox/: selenium.webdriver.firefox.extension_connection.rst  selenium.webdriver.firefox.firefox_binary.rst  selenium.webdriver.firefox.firefox_profile.rst  selenium.webdriver.firefox.options.rst  selenium.webdriver.firefox.webdriver.rst
py/docs/source/webdriver_ie/: selenium.webdriver.ie.webdriver.rst
py/docs/source/webdriver_opera/: selenium.webdriver.opera.webdriver.rst
py/docs/source/webdriver_remote/: selenium.webdriver.remote.command.rst  selenium.webdriver.remote.errorhandler.rst  selenium.webdriver.remote.mobile.rst  selenium.webdriver.remote.remote_connection.rst  selenium.webdriver.remote.utils.rst  selenium.webdriver.remote.webdriver.rst  selenium.webdriver.remote.webelement.rst
py/docs/source/webdriver_safari/: selenium.webdriver.safari.service.rst  selenium.webdriver.safari.webdriver.rst
py/docs/source/webdriver_support/: selenium.webdriver.support.abstract_event_listener.rst  selenium.webdriver.support.color.rst  selenium.webdriver.support.event_firing_webdriver.rst  selenium.webdriver.support.expected_conditions.rst  selenium.webdriver.support.select.rst  selenium.webdriver.support.wait.rst
py/docs/source/webdriver_webkitgtk/: selenium.webdriver.webkitgtk.options.rst  selenium.webdriver.webkitgtk.service.rst  selenium.webdriver.webkitgtk.webdriver.rst
py/selenium/common/: exceptions.py
py/selenium/webdriver/chrome/: options.py  service.py  webdriver.py
py/selenium/webdriver/chromium/: options.py  remote_connection.py  service.py  webdriver.py
py/selenium/webdriver/common/: action_chains.py  alert.py  desired_capabilities.py  service.py  touch_actions.py  utils.py
py/selenium/webdriver/common/actions/: action_builder.py  pointer_actions.py  pointer_input.py
py/selenium/webdriver/common/html5/: application_cache.py
py/selenium/webdriver/edge/: options.py  service.py  webdriver.py
py/selenium/webdriver/firefox/: extension_connection.py  firefox_binary.py  firefox_profile.py  options.py  remote_connection.py  service.py  webdriver.py  webelement.py
py/selenium/webdriver/ie/: options.py  service.py  webdriver.py
py/selenium/webdriver/opera/: options.py  webdriver.py
py/selenium/webdriver/remote/: command.py  errorhandler.py  file_detector.py  remote_connection.py  switch_to.py  webdriver.py  webelement.py
py/selenium/webdriver/safari/: remote_connection.py  service.py  webdriver.py
py/selenium/webdriver/support/: color.py  event_firing_webdriver.py  expected_conditions.py  relative_locator.py  select.py  wait.py
py/selenium/webdriver/webkitgtk/: options.py  service.py  webdriver.py
py/selenium/webdriver/wpewebkit/: options.py  service.py  webdriver.py
py/test/selenium/webdriver/chrome/: chrome_execute_cdp_cmd_tests.py  chrome_launcher_tests.py  chrome_network_emulation_tests.py
py/test/selenium/webdriver/common/: alerts_tests.py  api_example_tests.py  appcache_tests.py  children_finding_tests.py  clear_tests.py  click_scrolling_tests.py  click_tests.py  correct_event_firing_tests.py  driver_element_finding_tests.py  element_attribute_tests.py  element_equality_tests.py  example2.py  executing_async_javascript_tests.py  executing_javascript_tests.py  form_handling_tests.py  frame_switching_tests.py  google_one_box.py  implicit_waits_tests.py  interactions_tests.py  opacity_tests.py  page_load_timeout_tests.py  page_loading_tests.py  position_and_size_tests.py  proxy_tests.py  rendered_webelement_tests.py  repr_tests.py  results_page.py  select_class_tests.py  select_element_handling_tests.py  stale_reference_tests.py  takes_screenshots_tests.py  text_handling_tests.py  timeout_tests.py  typing_tests.py  visibility_tests.py  w3c_interaction_tests.py  webdriverwait_tests.py  window_switching_tests.py  window_tests.py
py/test/selenium/webdriver/firefox/: conftest.py  ff_launcher_tests.py  ff_profile_tests.py
py/test/selenium/webdriver/ie/: ie_launcher_tests.py
py/test/selenium/webdriver/marionette/: conftest.py  mn_binary_tests.py  mn_launcher_tests.py  mn_options_tests.py  mn_preferences_tests.py  mn_profile_tests.py  mn_service_tests.py
py/test/selenium/webdriver/remote/: remote_firefox_profile_tests.py  remote_hub_connection.py
py/test/selenium/webdriver/safari/: conftest.py
py/test/selenium/webdriver/support/: color_tests.py  event_firing_webdriver_tests.py  expected_conditions_tests.py  relative_by_tests.py
(+1792 files in other folders)
