filegroup(
    name = "license",
    srcs = [
        "LICENSE",
        "NOTICE",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "grid",
    actual = "//java/server/src/org/smartqa/automationagent/grid:executable-grid",
)

alias(
    name = "debug-server",
    actual = "//java/client/test/org/smartqa/automationagent/environment:appserver",
)

alias(
    name = "calcdeps",
    actual = "//javascript/atoms:deps",
)

alias(
    name = "selenium-server-standalone",
    actual = "//java/server/src/org/smartqa/automationagent/grid:selenium_server_deploy.jar",
)
