filegroup(
    name = "web",
    srcs = glob([
        "*",
        "**/*",
    ]),
    visibility = [
        "//dotnet/test/common:__pkg__",
        "//java/client/test/org/smartqa/automationagent/environment:__pkg__",
        "//javascript/node/automationAgent-webdriver:__pkg__",
        "//py:__pkg__",
    ],
)
