load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "api",
    srcs = [
        "CommandProcessor.java",
        "Selenium.java",
        "SeleniumException.java",
        "Wait.java",
    ],
    visibility = [
        "//java/client/src/com/smartqa/automationagent/condition:__pkg__",
    ],
)

java_library(
    name = "automationAgent",
    srcs = [
        "BrowserConfigurationOptions.java",
        "DefaultRemoteCommand.java",
        "DefaultSelenium.java",
        "HttpCommandProcessor.java",
        "RemoteCommand.java",
        "ScreenshotListener.java",
        "SeleneseTestBase.java",
        "SeleneseTestCase.java",
        "SeleneseTestNgHelper.java",
        "SeleniumLogLevels.java",
    ],
    visibility = [
        "//java/client/src/com/smartqa/automationagent:__subpackages__",
        "//java/client/test/com/smartqa/automationagent:__subpackages__",
        "//java/server/src/com/smartqa/automationagent:__subpackages__",
        "//java/server/src/org/smartqa/automationagent/server/htmlrunner:__pkg__",
        "//java/server/test/com/smartqa/automationagent:__subpackages__",
    ],
    exports = [
        ":api",
    ],
    deps = [
        ":api",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/edge",
        "//java/client/src/org/smartqa/automationagent/remote",
        artifact("junit:junit"),
        artifact("org.testng:testng"),
    ],
)

java_library(
    name = "leg-rc",
    visibility = [
        "//visibility:public",
    ],
    exports = [
        ":api",
        ":automationAgent",
        "//java/client/src/com/smartqa/automationagent/condition",
        "//java/client/src/com/smartqa/automationagent/webdriven",
    ],
)
