load("//java:version.bzl", "SE_VERSION")
load("//java:defs.bzl", "java_dist_zip", "java_export", "javadoc")

filegroup(
    name = "template-pom",
    srcs = ["pom.xml"],
    visibility = ["//visibility:public"],
)

java_export(
    name = "core",
    srcs = glob([
        "*.java",
        "html5/*.java",
        "internal/*.java",
        "interactions/**/*.java",
        "logging/**/*.java",
        "mobile/*.java",
        "net/*.java",
        "virtualauthenticator/*.java",
    ]),
    hides = [
        "org.smartqa.automationagent.interactions.internal",
        "org.smartqa.automationagent.internal",
    ],
    maven_coordinates = "org.seleniumhq.automationAgent:automationAgent-api:%s" % SE_VERSION,
    pom_template = ":template-pom",
    visibility = ["//visibility:public"],
    deps = [
        # Nothing from third party
        ":manifest",
    ],
)

java_export(
    name = "client-combined",
    maven_coordinates = "org.seleniumhq.automationAgent:automationAgent-java:" + SE_VERSION,
    pom_template = ":template-pom",
    exports = [
        ":core",
        "//java/client/src/org/smartqa/automationagent/chrome",
        "//java/client/src/org/smartqa/automationagent/edge",
        "//java/client/src/org/smartqa/automationagent/edgehtml",
        "//java/client/src/org/smartqa/automationagent/firefox",
        "//java/client/src/org/smartqa/automationagent/firefox/xpi",
        "//java/client/src/org/smartqa/automationagent/ie",
        "//java/client/src/org/smartqa/automationagent/opera",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/src/org/smartqa/automationagent/safari",
        "//java/client/src/org/smartqa/automationagent/support",
    ],
)

javadoc(
    name = "core-docs",
    deps = [
        ":core",
    ],
)

java_dist_zip(
    name = "client-zip",
    files = [
        "//:license",
        "//java:CHANGELOG",
    ],
    third_party_prefixes = [
        "@maven//",
        "//third_party",
    ],
    deps = [
        ":client-combined",
    ],
)

javadoc(
    name = "client-javadoc",
    third_party_prefixes = [
        "@maven//",
        "//third_party",
    ],
    transitive = True,
    deps = [
        ":client-combined",
    ],
)

java_import(
    name = "manifest",
    jars = [
        ":manifest-jar",
    ],
)

genrule(
    name = "manifest-jar",
    outs = [
        "version.jar",
    ],
    cmd = """
      mkdir -p META-INF &&
      echo "Selenium-Version = %s" >META-INF/automationAgent-build.properties &&
      echo "Build-Revision = " $$(grep GIT_REVISION bazel-out/stable-status.txt | cut -d' ' -f 2) >>META-INF/automationAgent-build.properties &&
      $(location @bazel_tools//tools/zip:zipper) c $@ META-INF/automationAgent-build.properties
    """ % SE_VERSION,
    stamp = True,
    tools = [
        "@bazel_tools//tools/zip:zipper",
    ],
)
