load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "testing",
    srcs = glob(["*.java"]),
    visibility = [
        "//java/server/test/org/smartqa/automationagent:__subpackages__",
    ],
    deps = [
        artifact("com.google.guava:guava"),
        artifact("javax.servlet:javax.servlet-api"),
    ],
)
