load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "condition",
    srcs = glob(["*.java"]),
    visibility = [
        "//java/client/src/com/smartqa/automationagent:__pkg__",
    ],
    deps = [
        "//java/client/src/com/smartqa/automationagent:api",
        artifact("junit:junit"),
    ],
)
