load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_export")
load("//java:version.bzl", "SE_VERSION")

java_export(
    name = "chrome",
    srcs = glob(["*.java"]),
    maven_coordinates = "org.seleniumhq.automationAgent:automationAgent-chrome-driver:%s" % SE_VERSION,
    pom_template = "//java/client/src/org/smartqa/automationagent:template-pom",
    visibility = ["//visibility:public"],
    exports = [
        "//java/client/src/org/smartqa/automationagent/chromium",
    ],
    deps = [
        "//java:auto-service",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/chromium",
        "//java/client/src/org/smartqa/automationagent/devtools",
        "//java/client/src/org/smartqa/automationagent/json",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/src/org/smartqa/automationagent/remote/http",
        artifact("com.google.guava:guava"),
    ],
)
