load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_export")
load("//java:version.bzl", "SE_VERSION")

java_export(
    name = "lift",
    srcs = glob(["**/*.java"]),
    maven_coordinates = "org.seleniumhq.automationAgent:lift:%s" % SE_VERSION,
    pom_template = "//java/client/src/org/smartqa/automationagent:template-pom",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/support",
        artifact("org.hamcrest:hamcrest"),
        artifact("junit:junit"),
    ],
)
