load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_export")
load("//java:version.bzl", "SE_VERSION")

java_export(
    name = "opera",
    srcs = glob(["*.java"]),
    maven_coordinates = "org.seleniumhq.automationAgent:automationAgent-opera-driver:%s" % SE_VERSION,
    pom_template = "//java/client/src/org/smartqa/automationagent:template-pom",
    visibility = ["//visibility:public"],
    deps = [
        "//java:auto-service",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/remote",
    ],
)
