load("@rules_jvm_external//:defs.bzl", "artifact")
load("//:copy_file.bzl", "copy_file")
load("//java:defs.bzl", "java_dist_zip", "java_export")
load("//java:version.bzl", "SE_VERSION")

java_library(
    name = "api",
    srcs = [
        "Augmentable.java",
        "Command.java",
        "CommandExecutor.java",
        "CommandPayload.java",
        "ErrorCodes.java",
        "Response.java",
        "ScreenshotException.java",
        "SessionId.java",
    ],
    visibility = [
        "//java/client/src/org/smartqa/automationagent/json:__pkg__",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/json",
        artifact("com.google.guava:guava"),
    ],
)

java_library(
    name = "capabilities",
    srcs = [
        "BrowserType.java",
        "CapabilityType.java",
        "DesiredCapabilities.java",
    ],
    visibility = [
        "//java/client/src/org/smartqa/automationagent/remote/session:__pkg__",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
    ],
)

java_library(
    name = "http-session-id",
    srcs = ["HttpSessionId.java"],
)

java_export(
    name = "remote",
    srcs = [
        "AddRotatable.java",
        "Augmenter.java",
        "AugmenterProvider.java",
        "RemoteRotatable.java",
        "RemoteTags.java",
        "html5/AddApplicationCache.java",
        "html5/AddLocationContext.java",
        "html5/AddWebStorage.java",
        "mobile/AddNetworkConnection.java",
    ],
    hides = [
        "org.smartqa.automationagent.remote.internal",
    ],
    maven_coordinates = "org.seleniumhq.automationAgent:automationAgent-remote-driver:%s" % SE_VERSION,
    pom_template = "//java/client/src/org/smartqa/automationagent:template-pom",
    uses = [
        "org.smartqa.automationagent.remote.AugmenterProvider",
        "org.smartqa.automationagent.remote.session.CapabilitiesFilter",
        "org.smartqa.automationagent.remote.session.CapabilityTransform",
        "org.smartqa.automationagent.remote.service.DriverService$Builder",
    ],
    visibility = ["//visibility:public"],
    exports = [
        ":api",
        ":capabilities",
        ":http-session-id",
        ":remote-lib",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/io",
        "//java/client/src/org/smartqa/automationagent/os",
        "//java/client/src/org/smartqa/automationagent/remote/http",
        "//java/client/src/org/smartqa/automationagent/remote/tracing",
        "//java/client/src/org/smartqa/automationagent/remote/tracing/opentelemetry",
    ],
    deps = [
        ":api",
        ":capabilities",
        ":remote-lib",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/io",
        "//java/client/src/org/smartqa/automationagent/os",
        "//java/client/src/org/smartqa/automationagent/remote/http/netty",
        "//java/client/src/org/smartqa/automationagent/remote/http/reactor",
        "//java/client/src/org/smartqa/automationagent/remote/tracing",
        artifact("com.google.guava:guava"),
        artifact("net.bytebuddy:byte-buddy"),
    ],
)

java_library(
    name = "remote-lib",
    srcs = [
        "AbstractDriverOptions.java",
        "AcceptedW3CCapabilityKeys.java",
        "CommandCodec.java",
        "CommandInfo.java",
        "Dialect.java",
        "DriverCommand.java",
        "ErrorHandler.java",
        "ExecuteMethod.java",
        "FileDetector.java",
        "HandshakeResponse.java",
        "HttpCommandExecutor.java",
        "InitialHandshakeResponse.java",
        "JsonToWebElementConverter.java",
        "JsonWireProtocolResponse.java",
        "LocalFileDetector.java",
        "NewSessionPayload.java",
        "ProtocolHandshake.java",
        "RemoteExecuteMethod.java",
        "RemoteKeyboard.java",
        "RemoteLogs.java",
        "RemoteMouse.java",
        "RemoteStatus.java",
        "RemoteTouchScreen.java",
        "RemoteWebDriver.java",
        "RemoteWebDriverBuilder.java",
        "RemoteWebElement.java",
        "ResponseCodec.java",
        "UnreachableBrowserException.java",
        "UselessFileDetector.java",
        "W3CHandshakeResponse.java",
        "html5/RemoteApplicationCache.java",
        "html5/RemoteLocalStorage.java",
        "html5/RemoteLocationContext.java",
        "html5/RemoteSessionStorage.java",
        "html5/RemoteWebStorage.java",
        "mobile/RemoteNetworkConnection.java",
    ] + glob([
        "codec/*.java",
        "codec/jwp/*.java",
        "codec/w3c/*.java",
        "internal/*.java",
        "service/*.java",
    ]),
    resources = [
        ":get-attribute",
        ":is-displayed",
    ],
    deps = [
        ":api",
        ":capabilities",
        ":http-session-id",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/io",
        "//java/client/src/org/smartqa/automationagent/json",
        "//java/client/src/org/smartqa/automationagent/os",
        "//java/client/src/org/smartqa/automationagent/remote/http",
        "//java/client/src/org/smartqa/automationagent/remote/session",
        artifact("com.google.guava:guava"),
    ],
)

copy_file(
    name = "get-attribute",
    src = "//javascript/webdriver/atoms:get-attribute.js",
    out = "getAttribute.js",
)

copy_file(
    name = "is-displayed",
    src = "//javascript/atoms/fragments:is-displayed.js",
    out = "isDisplayed.js",
)
