load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_selenium_test_suite")

java_selenium_test_suite(
    name = "large-tests",
    size = "large",
    srcs = glob(["*Test.java"]),
    browsers = ["chrome"],
    data = [
        "//third_party/chrome_ext:backspace.crx",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent/chrome",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/src/org/smartqa/automationagent/support",
        "//java/client/test/org/smartqa/automationagent/build",
        "//java/client/test/org/smartqa/automationagent/testing:annotations",
        "//java/client/test/org/smartqa/automationagent/testing:test-base",
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
        artifact("org.mockito:mockito-core"),
    ],
)
