load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "small-tests",
    size = "small",
    srcs = glob(["*.java"]),
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/chrome",
        "//java/client/src/org/smartqa/automationagent/chromium",
        "//java/client/src/org/smartqa/automationagent/edge",
        "//java/client/src/org/smartqa/automationagent/json",
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
    ],
)
